# rust-training

./: .gitignore  basics  basics.rs  borrows  borrows.rs  ejemplo  ejemplo.rs  estructura-memoria.rs  forandwhile  forandwhile.rs  hello  hello.rs  if  if.rs  iflet  iflet.rs  impl_and_trait.rs  lambda  lambda.rs  lifetimes  loopwhile  loopwhile.rs  match  match.rs  modulo.rs  struct_type_enum  struct_type_enum.rs  vectores  vectores.rs
dia01/: Cargo.toml
eqs/: Cargo.toml
eqs/src/: lib.rs
estructura/: Cargo.toml
estructura/src/: main.rs
guessing_game/: Cargo.toml
guessing_game/src/: main.rs
llenar_arreglos/: Cargo.toml
llenar_arreglos/src/: main.rs
raices/: Cargo.toml
raices/src/: main.rs
shell/: Cargo.toml
shell/src/: .main.rs.swp  main.rs
variables/: Cargo.toml
variables/src/: main.rs
