[package]
name = "dia01"
version = "0.1.0"
authors = ["Bruno Carballo <bruno@descifra.mx>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "main"
path = "src/bin/main.rs"

[[bin]]
name = "chicharron"
path = "src/bin/chicharron.rs"
